project(lab1)
add_executable(lab12 main_12.cpp Student.cpp Student.h GraduationDao.h GraduationDaoImpl.cpp GraduationDaoImpl.h GraduationService.h GraduationServiceImpl.cpp GraduationServiceImpl.h SettlementStatistics.h Settlement.cpp Settlement.h SettlementStatisticsImpl.cpp SettlementStatisticsImpl.h)
